[package]
name = "yjs_tree"
version = "0.1.0"
description = "A Rust library implementing a CRDT-based tree data structure powered by Yjs"
authors = ["Michelle Tilley <michelle@tilley.tech>"]
repository = "https://github.com/binarymuse/yjs_tree"
edition = "2021"
license = "MIT"

[dependencies]
fractional_index = "2.0.2"
itertools = "0.14.0"
orx-tree = "1.3.0"
parking_lot = "0.12.3"
uuid = { version = "1.13.2", features = ["v7"] }
yrs = "0.22.0"

[[example]]
name = "basic"

[[example]]
name = "sync"

[[example]]
name = "sync_reconcile"
