[package]
name = "yrs_tree"
version = "0.2.2"
description = "A Rust library implementing a CRDT-based tree data structure powered by Yrs"
authors = ["Michelle Tilley <michelle@tilley.tech>"]
repository = "https://github.com/binarymuse/yrs_tree"
documentation = "https://docs.rs/yrs_tree/"
categories = ["data-structures"]
homepage = "https://github.com/binarymuse/yrs_tree"
keywords = ["crdt", "tree", "yrs", "yjs"]
readme = "README.md"
edition = "2021"
license = "MIT"

[dependencies]
fractional_index = "2.0.2"
parking_lot = "0.12.3"
serde = "1.0.218"
uuid = { version = "1.13.2", features = ["v7"] }
yrs = "0.22.0"

[[example]]
name = "basic"

[[example]]
name = "sync"

[[example]]
name = "sync_reconcile"
